HtmlUi: Fix button margin on some browsers
Some user agent stylesheets contain a margin for buttons. Scout Html UI
does not require the margin, therefore we disable it explicitly for all
browsers. This fixes layout issues in Safari and Word-AddIn.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.css
@@ -128,6 +128,7 @@ input {
 
 button {
   padding: @button-padding;
+  margin: 0; /* reset user agent style, e.g. on safari */
 }
 
 textarea {
